添加协议、修改通知阅读状态

--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -196,15 +196,17 @@
 				el: "#mine",
 				data: {
 					userName: tempName,
-					settings: [{
-						name: "密码修改",
-						icon: "",
-						href: ""
-					}, {
-						name: "关于我们",
-						icon: "",
-						href: ""
-					}],
+					settings: [
+//					{
+//						name: "密码修改",
+//						icon: "",
+//						href: ""
+//					}, {
+//						name: "关于我们",
+//						icon: "",
+//						href: ""
+//					}
+					],
 					isMineShow: false //屏蔽或显示我的界面
 				},
 				methods: {
