--- a/wisdomCampus/html/selectPeople.html
+++ b/wisdomCampus/html/selectPeople.html
@@ -34,7 +34,7 @@
 		</style>
 	</head>
 
-	<body>
+	<body style="background-color: white;">
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">选择接收人</h1>
@@ -169,6 +169,8 @@
 							postDataEncry('ClassTec', enData0, comData0, 0, function(data) {
 								if(data.RspCode == 0) {
 									if(data.RspData) {
+										//去重
+										data.RspData.clssusers = data.RspData.clssusers.unique('utid');
 										//默认不选中
 										for(var i = 0; i < data.RspData.clssusers.length; i++) {
 											var tempModel = data.RspData.clssusers[i];
@@ -444,32 +446,40 @@
 				//个人信息中的班级列表
 				var tempClass = [].concat(personal.clss);
 				//去重
-				tempClass = tempClass.unique('grdcode');
+				tempClass = tempClass.unique('grdid');
 				console.log('tempClass:' + JSON.stringify(tempClass));
-				var tempGradeCode = ''; //需要查询的年级代码
+				var tempGradeId = ''; //需要查询的年级ID
 				for(var i = 0; i < tempClass.length; i++) {
 					var tempModel = tempClass[i];
-					tempGradeCode = tempGradeCode + ',' + tempModel.grdcode;
+					tempGradeId = tempGradeId + ',' + tempModel.grdid;
 				}
 				//去掉第一个，
-				tempGradeCode = tempGradeCode.substr(1, tempGradeCode.length);
+				tempGradeId = tempGradeId.substr(1, tempGradeId.length);
 				var enData0 = {};
 				//不需要加密的数据
 				var comData0 = {
 					uuid: publicParameter.uuid, //用户设备号
 					utoken: personal.utoken, //用户令牌
-					gradeids: tempGradeCode, //需要查询的年级代码，多个代码用英文逗号隔开
+					gradeids: tempGradeId, //需要查询的年级ID，多个代码用英文逗号隔开
 					appid: publicParameter.appid //系统所分配的应用ID
 				}
 				//发送网络请求，data为网络返回值
 				postDataEncry('GradeClass', enData0, comData0, 0, function(data) {
 					if(data.RspCode == 0) {
 						if(data.RspData) {
+							var tempClassId = ''; //需要查询的年级ID
 							for(var i = 0; i < data.RspData.clss.length; i++) {
 								var tempModel = data.RspData.clss[i];
-								tempModel.peopleArray = [];
+								tempClassId = tempClassId + ',' + tempModel.clsid;
 							}
-							selectPeopleData.departmentArray = selectPeopleData.departmentArray.concat(data.RspData.clss);
+							//去掉第一个，
+							tempClassId = tempClassId.substr(1, tempClassId.length);
+							var tempClassModel = {
+								clsname:'任教年级教师',
+								clsid:tempClassId,
+								peopleArray:[]
+							}
+							selectPeopleData.departmentArray.unshift(tempClassModel);
 						}
 					} else {
 						$.toast(data.RspTxt);
