--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -55,7 +55,7 @@
 		</header>
 		<div id="message" class="mui-content">
 
-			<div class="weui-cells">
+			<div class="weui-cells" style="margin-top: 0px;">
 				<div class="weui-cell">
 					<div class="weui-cell__hd">标题</div>
 					<div class="weui-cell__bd">
@@ -230,7 +230,7 @@
 				console.log('index:' + index + ',files.count:' + files.length + ',filesSum.length:' + filesSum.length);
 				if(index < files.length) {
 					if(filesSum + index > 8) {
-						$.alert("最多只能上传9张照片");
+						$.toast("最多只能上传9张照片", "cancel");
 					} else {
 						var file = files[index];
 						var types = file.type.toLowerCase().split("/");
@@ -269,7 +269,8 @@
 								uploadFiles(index, files, filesSum);
 							}
 							$('#uploaderInput').val('');
-							$.toast("请选择png,jpg,jpeg类型的图片");
+							$.toast("请选择png,jpg,jpeg类型的图片", "cancel");
+							
 						}
 					}
 				}
@@ -393,16 +394,16 @@
 				return upToken;
 			}
 			var addAffairApply = function() {
-				if(message.title.length == 0 || message.content.length == 0 || message.uploadedFiles.length == 0) {
-					alert('请填写具体内容后再发布');
+				if(message.title.length == 0 || message.content.length == 0) {
+					$.toast("请填写具体内容后再发布", "cancel");
 					return;
 				}
 				if(message.title.length >= 50) {
-					alert('标题不能超过50字');
+					$.toast("标题不能超过50字", "cancel");
 					return;
 				}
 				if(message.content.length >= 500) {
-					alert('内容不能超过500字');
+					$.toast("内容不能超过500字", "cancel");
 					return;
 				}
 
@@ -418,7 +419,7 @@
 				var noticEncName = nameArr.join("|")
 				var noticeEncAddr = addrArr.join("|")
 				var smsSync = message.smsSync == true ? 1 : 0
-				$.showLoading('加载中...');
+				
 				var personal = store.get(window.storageKeyName.PERSONALINFO);
 				var ids = [];
 				var codes = [];
@@ -429,6 +430,11 @@
 					codes.push("")
 					names.push(model.ManName)
 				}
+				if(ids.length == 0) {
+					$.toast("请选择接收人", "cancel");
+					return;
+				}
+				$.showLoading('加载中...');
 
 				var tempData = {
 					schoolId: storageKeyName.SCHOOLID, //学校ID
@@ -441,7 +447,7 @@
 					applyManName: personal.utname, //发布人姓名
 					approveManIds: ids, //接收人人ID
 					approveManCodes: codes, //接收人账号
-					approveManNames: names, //接收人姓名
+					approveManNames: names //接收人姓名
 				}
 				addAffairApplyPro(tempData, function function_name(data) {
 					console.log(JSON.stringify(data))
