--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -99,7 +99,7 @@
 						接收人
 					</div>
 					<div class="weui-cell__ft">
-						{{selectPeople.length>0? selectPeople.length+'人':'点击选择接收人'}}
+						{{peopleNum}}
 					</div>
 				</div>
 				<div class="weui-cell weui-cell_switch">
@@ -110,7 +110,7 @@
 				</div>
 			</div>
 			<a @click="clickSubmitBtn()" class="weui-btn weui-btn_blue">发布</a>
-			<div class="weui-gallery" :style="displayGallery" style="z-index: 999999;position:absolute;">
+			<div class="weui-gallery" :style="displayGallery" style="z-index: 99;position:absolute;">
 				<span class="weui-gallery__img" @click="clickGigImg" :style="{backgroundImage:'url('+selectImgPath+')'}"></span>
 				<div class="weui-gallery__opr">
 					<a href="javascript:" class="weui-gallery__del">
@@ -159,6 +159,13 @@
 					uploadedFiles: [],
 					selectPeople: []
 				},
+				computed: {
+    // 计算属性的 getter
+    peopleNum: function () {
+      // `this` 指向 vm 实例
+      return this.selectPeople.length>0? this.selectPeople.length+'人':'点击选择接收人'
+    }
+  },
 				methods: {
 					selectFile: function(event) { //从手机中选择图片后到界面的回调
 						// 如果没有选中文件，直接返回  
