通知公告传参数

--- a/wisdomCampus/html/new-check.html
+++ b/wisdomCampus/html/new-check.html
@@ -492,7 +492,7 @@
 				getWorkFlowListByIdPro(tempData, function function_name(data) {
 					console.log(JSON.stringify(data))
 					if(data.RspCode == 0) {
-						message.flowMan_arr = data.RspData.Data;
+						message.flowMan_arr =message.flowMan_arr.concat(data.RspData.Data) ;
 
 					} else {
 
@@ -536,7 +536,6 @@
 				}
 
 				message.flowMan_arr = message.flowMan_arr.concat(tempArr);
-				console.log('flowMan_arr:', JSON.stringify(flowMan_arr));
 
 			})
 		</script>
