--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -209,7 +209,8 @@
 					},
 					selectPepole: function() {
 						var data = {
-							flag: 1 //1 通知公告
+							flag: 1 ,//1 通知公告
+							selectPepople:message.selectPeople
 						}
 						utils.mOpenWithData("selectPeople.html", data)
 					}
