--- a/wisdomCampus/html/new_message.html
+++ b/wisdomCampus/html/new_message.html
@@ -449,6 +449,7 @@
 					console.log(JSON.stringify(data))
 					if(data.RspCode == 0) {
 						$.hideLoading();
+						mui.toast("发布成功")
 						mui.back();
 					} else {
 
