--- a/wisdomCampus/html/home.html
+++ b/wisdomCampus/html/home.html
@@ -181,7 +181,9 @@
 			mui(".mui-table-view").on('tap', 'a', function() {
 				var id = this.parentElement.id
 				if(id == 1 || id == 2) {
-					utils.hrefSessionStorage("all.html", id);
+											utils.mOpenWithData("all.html",id)
+
+//					utils.hrefSessionStorage("all.html", id);
 				} else {
 					mui.toast("此功能暂未开放");
 				}
